# Contextual-bandit-brain

./: .gitignore  README.md  actions.py  brain.py  service.py  simulator.py
artifacts/: bis_report.json
ci/: bis_benchmark.py  evaluate_bis.py  run_brain_evaluation.py  thresholds.yaml
contextual_bandit_brain/: README.md  pyproject.toml  requirements.txt
contextual_bandit_brain/api/: decision_service.py  router.py  schemas.py
contextual_bandit_brain/bis/: metrics.py  normalization.py  scoring.py
contextual_bandit_brain/brain/: base_bandit.py  config.py  linucb.py  state.py
contextual_bandit_brain/ci/: run_benchmark.py  run_bis_ci.py
contextual_bandit_brain/core/: arm.py  brain.py  linucb.py
contextual_bandit_brain/evaluation/: bis.py  metrics.py  plots.py  reports.py
contextual_bandit_brain/examples/: run_full_simulation.py
contextual_bandit_brain/reporting/: plots.py  report_generator.py
contextual_bandit_brain/simulator/: drift.py  environment.py  reward_model.py  reward_models.py  student_model.py
contextual_bandit_brain/tests/: test_api_service.py  test_behavior.py  test_behavioral_curves.py  test_determinism.py  test_learning_behavior_new.py  test_linucb.py  test_metrics.py  test_persistence_lib.py  test_reward_model_linear.py  test_spd.py
docs/: architecture.md  bis_spec.md  math.md
examples/: clean_ui_aggregate.py  clean_ui_aggregate_report.json  clean_ui_report.json  clean_ui_test.py  run_simulation.py
tests/: README.md  conftest.py  test_api.py  test_bis_ci.py  test_brain.py  test_cross_domain.py  test_explainability.py  test_stress.py  (+5 more)
(+2 files in other folders)
