[project]
name = "contextual_bandit_brain"
version = "0.1.0"
description = "Standalone LinUCB decision engine with simulator and BIS benchmarking"
authors = [{name = "TraeAI"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "matplotlib>=3.6"]

[tool.pytest.ini_options]
testpaths = ["contextual_bandit_brain/tests"]
