[project]
name = "contextual_bandit_brain"
version = "0.1.0"
description = "Standalone LinUCB decision engine with simulator and BIS benchmarking"
authors = [{name = "Contextual-bandit-brain"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "matplotlib>=3.6"]
optional-dependencies = { api = ["fastapi>=0.110", "pydantic>=2.0", "uvicorn>=0.22"], ci = ["PyYAML>=6.0"] }

[tool.pytest.ini_options]
testpaths = ["contextual_bandit_brain/tests", "tests"]
